fix: collapsed blocks can't be displayed as answers

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -451,7 +451,7 @@ a.filter svg {
     }
 }
 
-.ls-card a[data-ref*="card"], .ls-card .page-reference[data-ref*="card"] {
+a[data-ref*="card"], .page-reference[data-ref*="card"] {
     display: none;
 }
 
